tests/specs/ecosystem/radix_ui_fork/react_use_size/0_0_5.test
radix-ui-fork/react-use-size/0.0.5
-- deno.lock --
{
  "version": "3",
  "remote": {}
}

===

== FAST CHECK EMIT PASSED ==

== TYPE CHECK FAILED ==
-- stdout --

-- stderr --
TS2304 [ERROR]: Cannot find name 'HTMLElement'.
function useSize(element: HTMLElement | null): {
                          ~~~~~~~~~~~
    at file://<tmpdir>/src/useSize.tsx:1:27

error: Type checking failed.

